# xmonad

./: README.md
config-roth/: config.cabal  xmonad.hs
config-theorema/: stack.yaml  xmonad.hs
config-theorema/old/: polybar  taffybar.hs
config-theorema/theme/Breeze transparent panel/: metadata.desktop
config-theorema/theme/Breeze transparent panel/widgets/: tooltip.svgz
config-theorema/xsessions/: xmonad-kde.desktop  xmonad.desktop
xmonad-my/: stack.yaml  xmonad-my.cabal
xmonad-my/lib/: Actions.hs  Basic.hs  History.hs  TabScreen.hs
xmonad-my/lib/Actions/: Basic.hs  Brightness.hs  Maximize.hs  Navigation.hs  OptionalBorder.hs  Rotation.hs  TabScreen.hs  Volume.hs  XMonad.hs
xmonad-my/lib/Actions/Desktop/: Plasma.hs
xmonad-my/lib/Basic/: Background.hs  Basic.hs  ConfigModifier.hs  DoubleClick.hs  Float.hs  KeyBindings.hs
xmonad-my/lib/Desktop/: Fullscreen.hs  Plasma.hs
xmonad-my/lib/Layout/: EmptyWindows.hs  FocusIsMaster.hs  Maximize.hs  OptionalBorder.hs  OptionalTitleBar.hs  Overlay.hs  ShrinkUnfocused.hs  Tabbed.hs
xmonad-my/lib/Memory/: Handle.hs  Input.hs
